scrollbar fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #52525a;
+    background-color: #212529;
     color: rgb(255, 255, 255);
 
 }
@@ -7,7 +7,7 @@ body {
 /* For Slide Show Images */
 .resize {
   width:100vw;
-  height:48vw;
+  height:46.4vw;
 }
 
 /* For Card Images */
